--- a/order-service-development.properties
+++ b/order-service-development.properties
@@ -1,5 +1,6 @@
 msg = message from config server devlopment properties seriesmodel service
 
+server.port=8484
 
 # micro service name
 spring.application.name=order-service
