--- a/seriesmodel-service-development.properties
+++ b/seriesmodel-service-development.properties
@@ -1,5 +1,7 @@
 msg = message from config server devlopment properties seriesmodel service
 
+server.port=8485
+
 # micro service name
 spring.application.name=seriesmodel-service
 
