--- a/user-service-development.properties
+++ b/user-service-development.properties
@@ -1,3 +1,10 @@
+
+server.port=8181
+
+
+# micro service name
+spring.application.name=user-service
+
 msg = message from user-service development properties, modified
 spring.datasource.driver=com.jdbc.mysql.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1/micro_users_db?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
